apps/base/infra-unifi/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-unifi
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
