apps/base/infra-unifi/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
      app.kubernetes.io/component: unifi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
        app.kubernetes.io/component: unifi
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999  # unifi
        fsGroup: 999
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: unifi
        image: "registry.lan/unifi:v7.4.162"
        imagePullPolicy: IfNotPresent        
        ports:
        # https://help.ubnt.com/hc/en-us/articles/218506997-UniFi-Ports-Used
        - name: stun
          containerPort: 3478 # Port used for STUN.
          protocol: UDP
        - name: http-crtl
          containerPort: 8080 # Port used for device and controller communication.
          protocol: TCP
        - name: https-crtl
          containerPort: 8443 # Port used for controller GUI/API as seen in a web browser
          protocol: TCP
        - name: http-portal
          containerPort: 8880 # Port used for HTTP portal redirection.
          protocol: TCP
        - name: https-portal
          containerPort: 8843 # Port used for HTTPS portal redirection.
          protocol: TCP
        - name: speed-test
          containerPort: 6789 # Port used for UniFi mobile speed test.
          protocol: TCP
        - name: ap-discovery
          containerPort: 10001 # 	Port used for AP discovery
          protocol: UDP
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: https-crtl
          initialDelaySeconds: 3
          periodSeconds: 5
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: 25m
            memory: 1Gi
          limits:
            cpu: 250m
            memory: 1Gi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: keystore-volume
          mountPath: /etc/ssl/certs/java
        - name: unifi-data
          mountPath: /unifi
        - name: tmp-volume
          mountPath: /tmp
        - name: tmp-run-volume
          mountPath: /var/run/unifi
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: unifi-data
        persistentVolumeClaim:
          claimName: unifi-data
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      - name: keystore-volume
        emptyDir: {}
      - name: tmp-volume
        emptyDir: {}
      - name: tmp-run-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
