apps/base/infra-unifi/deploy/service-private-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-private-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi-private
spec:
  type: LoadBalancer
  loadBalancerIP: 1.2.3.4
  externalTrafficPolicy: Local
  ports:
  # Port used for STUN.
  - name: stun
    port: 3478
    targetPort: stun
    protocol: UDP
  # Port used for AP discovery
  - name: ap-discovery
    port: 10001
    targetPort: ap-discovery
    protocol: UDP
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/component: unifi
