apps/base/infra-unifi/deploy/service-public.yaml

apiVersion: v1
kind: Service
metadata:
  name: unifi-frontend
spec:
  ports:
  # Port used for controller GUI/API as seen in a web browser
  - name: https-crtl
    port: 443
    targetPort: https-crtl
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/component: unifi
