apps/base/infra-unifi/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/name: UniFi
    gethomepage.dev/description: Controller for Unifi devices
    gethomepage.dev/icon: unifi
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=unifi"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - unifi.infra.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: unifi.infra.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi-frontend
            port:
              name: https-crtl
